force-app/main/default/objects/QA_CMOS_Scoring_Table__mdt/QA_CMOS_Scoring_Table__mdt.object-meta.xml
<CustomObject>
    <label>QA Get Help Scoring Table</label>
    <pluralLabel>QA Get Help Scoring Tables</pluralLabel>
</CustomObject>