force-app/main/default/objects/QA_CMOS_Scoring_Table__mdt/fields/Business_Score__c.field-meta.xml
<CustomField>
    <fullName>Business_Score__c</fullName>
    <label>Business Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>