force-app/main/default/objects/QA_CMOS_Scoring_Table__mdt/fields/Case_Manager_Score__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager_Score__c</fullName>
    <label>Case Manager Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>