force-app/main/default/objects/QA_CMOS_Scoring_Table__mdt/fields/Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Type__c</fullName>
    <label>Evaluation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C&amp;Q Assessment</fullName>
                <default>true</default>
                <label>C&amp;Q Assessment</label>
            </value>
            <value>
                <fullName>Call Review Assessment</fullName>
            </value>
            <value>
                <fullName>Letter Review Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>