force-app/main/default/objects/QA_CMOS_Scoring_Table__mdt/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not met</fullName>
            </value>
            <value>
                <fullName>Not met (outside CM Control)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>